--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images//logoecotec.png" />
 
-    <title>Clancy's</title>
+    <title>Ecuaturismo Rent A car</title>
 </head>
 
 <body>
@@ -63,9 +63,9 @@
     <section id="hero">
         <duv class="container">
             <div class="content-center">
-                <h1 class="mt-5">Clancy's</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
-                    aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
+                <h1 class="mt-5">Ecuaturismo Rent A car</h1>
+                <p style="color:#FFFFFF">Ecuaturismo Rent A car tiene una variedad de objetivos en los cuales el principal, es el alquiler de carros, podemos encontrar desde un vehículo familiar hasta un deportivo, otro objetivo es la compra y venta de carros, por ultimo esta la venta de repuesto automotrices donde 
+                además tiene un departamento técnico que facilitara el cambio de repuesto comprados en la empresa. </p>
                 <a href="#" class="btn btn-secondary mt-4">Explore now <img src="assets/images/arrow-right.svg" class="ml-2"></a>
             </div>
         </duv>
@@ -74,67 +74,65 @@
     <section id="portafolio">
         <div class="container-fluid">
             <div class="content-center">
-                <h2>Trabajamos con clientes de todo el mundo <b> - productos de calidad.</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
-                    aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
-                    nesciunt error ut quidem autem.</p>
+                <h2>Trabajamos dando los mejores productos y servicios<b> - la calidad nos caracteriza.</b></h2>
+                <p>Dentro de los servicios prodcutos que ofrece la empresa se puede destacar los siguientes:.</p>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Policia</h2>
+                                <h2>Venta Autos</h2>
                             </a>
                             <a href="#">
-                                <p>— Formal/Casual</p>
+                                <p>— Nuevos/Usados</p>
                             </a>
                         </div>
-                        <img src="assets/images/elementon.jpg" class="img-fluid" alt="Portfolio 01">
+                        <img src="assets/images/auto.jpg" class="img-fluid" alt="Portfolio 01">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Militares</h2>
+                                <h2>Repuestos</h2>
                             </a>
                             <a href="#">
-                                <p>— Formal/Casual</p>
+                                <p>— Mecanico/Manual</p>
                             </a>
                         </div>
-                        <img src="assets/images/elemento2.jpg" class="img-fluid" alt="Portfolio 02">
+                        <img src="assets/images/llanta.jpg" class="img-fluid" alt="Portfolio 02">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Urban Oasis</h2>
+                                <h2>Mecanico</h2>
                             </a>
                             <a href="#">
-                                <p>— Formal/Casual</p>
+                                <p>— Automotriz/Electrico</p>
                             </a>
                         </div>
-                        <img src="assets/images/elemento3.jpg" class="img-fluid" alt="Portfolio 03">
+                        <img src="assets/images/atencion2.jpg" class="img-fluid" alt="Portfolio 03">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Otros</h2>
+                                <h2>Alquiler</h2>
                             </a>
                             <a href="#">
-                                <p>— Formal/Casual</p>
+                                <p>— Mensual/Diario</p>
                             </a>
                         </div>
-                        <img src="assets/images/elemento4.jpg" class="img-fluid" alt="Portfolio 04">
+                        <img src="assets/images/alquiler2.jpg" class="img-fluid" alt="Portfolio 04">
                     </div>
                 </div>
             </div>
             <div class="text-center mt-4">
-                <p class="">Listo para cambiar la forma de como se ven tus unifromes?</p>
+                <p class="">Listo para cambiar la forma de como te mueves y cuidas tu vehiculo?</p>
                 <a href="#" class="text-dark"><b>Dejanoslo saber.</b></a>
             </div>
         </div>
@@ -143,17 +141,15 @@
     <section id="team" class="bgLightGrey">
         <div class="container">
             <div class="content-center">
-                <h2>Tranquilo!! estas en buenas manos <b>- Trabajamos con los mejores diseñadores</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
-                    aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
-                    nesciunt error ut quidem autem.</p>
+                <h2>Tranquilo!! estas en buenas manos <b>- Trabajamos con los mejores </b></h2>
+                <p>Dentro del listado de proveedores se encuentran:.</p>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
-                            <h5>Melvine Mine</h5>
-                            <span>Diseñadora Principal - Colores</span>
+                            <h5>Juana Del Arco</h5>
+                            <span>Representante - HYUNDAI,BMW,SKODA</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -170,7 +166,7 @@
                     <div class="member-container">
                         <div class="member-details">
                             <h5>Dundee Jhonson</h5>
-                            <span>Diseñadora Principal - Estilo</span>
+                            <span>Representante - Bosch,Castrol,Fram</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -187,7 +183,7 @@
                     <div class="member-container">
                         <div class="member-details">
                             <h5>Claudio Rialtto</h5>
-                            <span>Diseñador Principal - Textil</span>
+                            <span>DRepresentante - Chubb,IBM</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -208,22 +204,21 @@
         <div class="container">
             <div class="content-center">
                 <h2>Precios adecuados para cada <b> sector estrategico</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
-                    aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
-                    nesciunt error ut quidem autem.</p>
+                <p>Dentro de las caracteristicas de nuestro servicio principal que es el alquiler
+		de autos de gama media y alta se encuentra nuestros precios accesibles:</p>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="pricing-container">
                         <div class="plans plan-light">
-                            <h4>Equipo completo</h4>
-                            <h2>$120 <span>/ por unidad</span></h2>
+                            <h4>Alquiler mensual/anual</h4>
+                            <h2>$200/$2500 <span>Hyundai,Toyota,Haval</span></h2>
                             <h4>Descuentos desde un millon de unidades</h4>
                             <ul class="mt-3">
-                                <li>Uniforme Formal</li>
-                                <li>Uniforme Casual</li>
-                                <li>Extras</li>
-                                <li>Insignias/Escudos</li>
+                                <li>Revision Gratuita</li>
+                                <li>Seguro Vigente</li>
+                                <li>Gastos Administrativos</li>
+                                <li>Vehiculo Gama Media</li>
                             </ul>
                             <a href="#" class="btn btn-primary full-width mt-4">Start now</a>
                         </div>
@@ -232,14 +227,14 @@
                 <div class="col-md-6">
                     <div class="pricing-container">
                         <div class="plans plan-dark">
-                            <h4>Equipo SemiCompleto</h4>
-                            <h2>$80 <span>/ por unidad</span></h2>
+                            <h4>Alquiler mensual/anual</h4>
+                            <h2>$400/$5000 <span>BMW,Audi,Mercedes Benz</span></h2>
                             <h4>Descuentos desde un millon de unidades</h4>
                             <ul class="mt-3">
-                                <li>Uniforme Formal / Uniforme Casual</li>
-                                <li>Eleccion del cliente</li>
-                                <li>Extras</li>
-                                <li>Insignias/Escudos</li>
+                                <li>Revision Gratuita</li>
+                                <li>Seguro Vigente</li>
+                                <li>Gastos Administrativos</li>
+                                <li>Vehiculo Gama Alta</li>
                             </ul>
                             <a href="#" class="btn btn-alternate full-width mt-4">Start now</a>
                         </div>
@@ -253,14 +248,14 @@
         <div class="container">
             <div class="content-center">
                 <h2>Recomedaciones de <b>clientes</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
-                    aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
+                <p>Dejamos experiencias de nuestros clientes de servicios y productos
+		para que comprueben los hechos.</p>
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="carousel-container">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.
+                            <p>¨Gracias a sus precios pude viajar y conocer lugares en mi estancia en el pais.¨
                             </p>
                             <div class="rating">
                                 <ul class="list-inline">
@@ -278,7 +273,7 @@
                                     </div>
                                     <div class="col-md-9 col-9">
                                         <h6>Marissa Mayer</h6>
-                                        <span>Sargento Policial - Chicago</span>
+                                        <span>Clienta - Alquiler</span>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +281,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-container">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
+                            <p>¨Solucionaron un problema vigente de mi auto sin cobrarme una millonada¨</p>
                             <div class="rating">
                                 <ul class="list-inline">
                                     <li class="list-inline-item"><i class="icon ion-md-star"></i></li>
@@ -303,7 +298,7 @@
                                     </div>
                                     <div class="col-md-9 col-9">
                                         <h6>Marry Barra</h6>
-                                        <span>General Policial - España</span>
+                                        <span>Clienta - Mecanico</span>
                                     </div>
                                 </div>
                             </div>
@@ -311,7 +306,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-container">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
+                            <p>¨Gracias a su guia adquiri mi nuevo vehiculo a un gran precio¨</p>
                             <div class="rating">
                                 <ul class="list-inline">
                                     <li class="list-inline-item"><i class="icon ion-md-star"></i></li>
@@ -328,7 +323,7 @@
                                     </div>
                                     <div class="col-md-9 col-9">
                                         <h6>Efren Loor</h6>
-                                        <span>Teniente - Fuerza Militar EEUU</span>
+                                        <span>Cliente - Venta</span>
                                     </div>
                                 </div>
                             </div>
@@ -355,10 +350,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>Listo para cambiar la forma de como se ven tus unifromes? <b>Dejanoslo saber.</b></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam
-                        mollitia aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.
-                        contact@clancys.com</p>
+                    <h3>Listo para revolucionar la forma de como te mueves y cuidas tu vehiculo?<b> Dejanoslo saber.</b></h3>
+                    <p>Dejanos los datos donde podremos contactarte y un ejecutivo se pondra en contacto para brindarte
+                        toda la informacion necesario para que tranformes tu vida o escribenos directamente al correo
+                        <b>contactventas@ecuaturismorentacar.com</b></p>
                 </div>
                 <div class="col-md-6 mt-4">
                     <div class="row">
@@ -399,7 +394,7 @@
 
     <footer class="bgDark">
         <div class="container">
-            <img src="assets/images/logoecotec2.png" class="logo-brand" alt="logo">
+            <img src="assets/images/logo-ecotec-educacion-continua-blanco.png" class="logo-brand" alt="logo">
             <ul class="list-inline">
                 <li class="list-inline-item footer-menu"><a href="#">Inicio</a></li>
                 <li class="list-inline-item footer-menu"><a href="#">Productos</a></li>
